tests/rosetta/out/Fortran/arrays.error
gfortran: exit status 1
/tmp/arrays.f90:38:3:

   38 |   s(((0)+1)) = 22
      |   1
Error: Unclassifiable statement at (1)
/tmp/arrays.f90:64:10:

   64 |   s = (//)
      |          1
Error: Empty array constructor at (1) is not allowed
/tmp/arrays.f90:78:50:

   78 |   recursive character(len=100) function listStr(xs) result(res)
      |                                                  1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘xs’ at (1)
/tmp/arrays.f90:80:8:

   80 |     s = '['
      |        1
Error: Cannot convert CHARACTER(1) to INTEGER(4) at (1)
/tmp/arrays.f90:84:11:

   84 |       s = (s + s12)
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are INTEGER(4)/CHARACTER(100)
/tmp/arrays.f90:85:26:

   85 |       if (((i + 1) < size(xs))) then
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:86:12:

   86 |         s = s // ' '
      |            1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(1)
/tmp/arrays.f90:82:24:

   82 |     do while ((i < size(xs)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:90:8:

   90 |     s = s // ']'
      |        1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(1)
/tmp/arrays.f90:91:10:

   91 |     res = s
      |          1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/tmp/arrays.f90:24:29:

   24 |   print *, 'a = ' // listStr(a)
      |                             1
Error: Rank mismatch in argument ‘xs’ at (1) (scalar and rank-1)
/tmp/arrays.f90:26:29:

   26 |   print *, 'a = ' // listStr(a)
      |                             1
Error: Rank mismatch in argument ‘xs’ at (1) (scalar and rank-1)
/tmp/arrays.f90:29:2:

   29 |   s = a(1:4)
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arrays.f90:31:29:

   31 |   print *, 's = ' // listStr(s)
      |                             1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/arrays.f90:32:24:

   32 |   write(s2,'(G0)') size(s)
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:35:2:

   35 |   s = a(1:5)
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arrays.f90:36:29:

   36 |   print *, 's = ' // listStr(s)
      |                             1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/arrays.f90:39:29:

   39 |   print *, 'a = ' // listStr(a)
      |                             1
Error: Rank mismatch in argument ‘xs’ at (1) (scalar and rank-1)
/tmp/arrays.f90:40:29:

   40 |   print *, 's = ' // listStr(s)
      |                             1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/arrays.f90:42:21:

   42 |   allocate(app4(size(s)+1))
      |                     1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:43:14:

   43 |   app4(1:size(s)) = s
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:44:12:

   44 |   app4(size(s)+1) = 4
      |            1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:45:2:

   45 |   s = app4
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arrays.f90:47:21:

   47 |   allocate(app5(size(s)+1))
      |                     1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:48:14:

   48 |   app5(1:size(s)) = s
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:49:12:

   49 |   app5(size(s)+1) = 5
      |            1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:50:2:

   50 |   s = app5
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arrays.f90:52:21:

   52 |   allocate(app6(size(s)+1))
      |                     1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:53:14:

   53 |   app6(1:size(s)) = s
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:54:12:

   54 |   app6(size(s)+1) = 6
      |            1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:55:2:

   55 |   s = app6
      |  1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arrays.f90:57:29:

   57 |   print *, 's = ' // listStr(s)
      |                             1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/arrays.f90:58:24:

   58 |   write(s7,'(G0)') size(s)
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:62:29:

   62 |   print *, 'a = ' // listStr(a)
      |                             1
Error: Rank mismatch in argument ‘xs’ at (1) (scalar and rank-1)
/tmp/arrays.f90:63:29:

   63 |   print *, 's = ' // listStr(s)
      |                             1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/arrays.f90:67:23:

   67 |     allocate(app9(size(s)+1))
      |                       1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:68:16:

   68 |     app9(1:size(s)) = s
      |                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:69:14:

   69 |     app9(size(s)+1) = 0
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arrays.f90:70:4:

   70 |     s = app9
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arrays.f90:73:29:

   73 |   print *, 's = ' // listStr(s)
      |                             1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/arrays.f90:74:25:

   74 |   write(s10,'(G0)') size(s)
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
