tests/rosetta/out/Fortran/arrays.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program arrays
  implicit none
  integer, dimension(5) :: a
  integer :: s
  integer :: cap_s
  character(len=100) :: s0
  character(len=100) :: s1
  character(len=100) :: s2
  character(len=100) :: s3
  integer, allocatable, dimension(:) :: app4
  integer, allocatable, dimension(:) :: app5
  integer, allocatable, dimension(:) :: app6
  character(len=100) :: s7
  character(len=100) :: s8
  integer :: i
    integer, allocatable, dimension(:) :: app9
  character(len=100) :: s10
  character(len=100) :: s11
      character(len=100) :: s12
  a = (/0,0,0,0,0/)
  write(s0,'(G0)') size(a)
  print *, 'len(a) = ' // s0
  print *, 'a = ' // listStr(a)
  a(((0)+1)) = 3
  print *, 'a = ' // listStr(a)
  write(s1,'(G0)') a(((0)+1))
  print *, 'a[0] = ' // s1
  s = a(1:4)
  cap_s = 5
  print *, 's = ' // listStr(s)
  write(s2,'(G0)') size(s)
  write(s3,'(G0)') cap_s
  print *, trim(trim('len(s) = ' // s2) // '  cap(s) = ') // s3
  s = a(1:5)
  print *, 's = ' // listStr(s)
  a(((0)+1)) = 22
  s(((0)+1)) = 22
  print *, 'a = ' // listStr(a)
  print *, 's = ' // listStr(s)
  if (allocated(app4)) deallocate(app4)
  allocate(app4(size(s)+1))
  app4(1:size(s)) = s
  app4(size(s)+1) = 4
  s = app4
  if (allocated(app5)) deallocate(app5)
  allocate(app5(size(s)+1))
  app5(1:size(s)) = s
  app5(size(s)+1) = 5
  s = app5
  if (allocated(app6)) deallocate(app6)
  allocate(app6(size(s)+1))
  app6(1:size(s)) = s
  app6(size(s)+1) = 6
  s = app6
  cap_s = 10
  print *, 's = ' // listStr(s)
  write(s7,'(G0)') size(s)
  write(s8,'(G0)') cap_s
  print *, trim(trim('len(s) = ' // s7) // '  cap(s) = ') // s8
  a(((4)+1)) = -1
  print *, 'a = ' // listStr(a)
  print *, 's = ' // listStr(s)
  s = (//)
  do i = 0, 8
    if (allocated(app9)) deallocate(app9)
    allocate(app9(size(s)+1))
    app9(1:size(s)) = s
    app9(size(s)+1) = 0
    s = app9
  end do
  cap_s = 8
  print *, 's = ' // listStr(s)
  write(s10,'(G0)') size(s)
  write(s11,'(G0)') cap_s
  print *, trim(trim('len(s) = ' // s10) // '  cap(s) = ') // s11
  contains
  recursive character(len=100) function listStr(xs) result(res)
    integer, intent(in) :: xs
    s = '['
    i = 0
    do while ((i < size(xs)))
      write(s12,'(G0)') xs(((i)+1))
      s = (s + s12)
      if (((i + 1) < size(xs))) then
        s = s // ' '
      end if
      i = (i + 1)
    end do
    s = s // ']'
    res = s
    return
  end function listStr
end program arrays
